# tikv

./: Cargo.toml
cmd/tikv-server/src/: main.rs
components/pd_client/src/: client.rs  lib.rs
components/raftstore/src/store/: mod.rs  msg.rs  peer.rs
components/raftstore/src/store/fsm/: peer.rs
components/raftstore/src/store/worker/: pd.rs
components/recovery/: Cargo.toml
components/recovery/src/: lib.rs  recovery.rs  recovery_meta.rs  recovery_service.rs  service.rs
components/recovery/tests/: mod.rs
components/server/: Cargo.toml
components/server/src/: server.rs  setup.rs
components/snap_recovery/src/: data_resolver.rs  init_cluster.rs  lib.rs  region_meta_collector.rs  services.rs
src/: config.rs
tests/integrations/raftstore/: test_snap_recovery.rs
